--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
     ],
     "require": {
         "php": "^5.6|^7.0",
-        "symfony/framework-bundle": "^2.8|^3.0|^4",
-        "symfony/console": "^2.8|^3.0|^4",
-        "symfony/stopwatch": "^2.8|^3.0|^4",
-        "symfony/templating": "^2.8|^3.0|^4",
-        "symfony/asset": "^2.8|^3.0|^4",
+        "symfony/framework-bundle": "^2.8|^3.0|^4|^5.0",
+        "symfony/console": "^2.8|^3.0|^4|^5.0",
+        "symfony/stopwatch": "^2.8|^3.0|^4|^5.0",
+        "symfony/templating": "^2.8|^3.0|^4|^5.0",
+        "symfony/asset": "^2.8|^3.0|^4|^5.0",
         "doctrine/annotations": "~1.2",
         "doctrine/inflector": "~1.0",
         "doctrine/cache": "~1.4",
